Sistema Multi usuários

--- a/templates/home.html
+++ b/templates/home.html
@@ -152,7 +152,7 @@
     }
 
     function logout() {
-      window.location.href = "/login";
+      window.location.href = "/logout";
     }
 
     loadData();
