--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@
         <input type="text" id="createSite" placeholder="Ex: www.site.com" required>
 
         <label for="createUser">Usuário</label>
-        <input type="text" id="createUser" placeholder="Nome de usuário" required>
+        <input type="text" id="createUser" placeholder="Usuário (Deixe vazio para padrão)" required>
 
         <label for="createPassword">Senha</label>
         <input type="password" id="createPassword" placeholder="Deixe vazio para gerar" required>
@@ -57,7 +57,7 @@
         <input type="text" id="editSite" readonly>
 
         <label for="editUser">Novo usuário</label>
-        <input type="text" id="editUser" placeholder="Digite o novo usuário">
+        <input type="text" id="editUser" placeholder="Usuário (Deixe vazio para padrão)">
         
         <div id="editPasswordGroup">
           <label for="editUser">Nova Senha</label>
@@ -150,7 +150,7 @@
       const site = document.getElementById("createSite").value;
       const user = document.getElementById("createUser").value;
       const password = document.getElementById("createPassword").value;
-      if (!site || !user) return;
+      if (!site) return;
 
       const res = await fetch("/home", {
         method: "POST",
@@ -182,7 +182,7 @@
       const user = document.getElementById("editUser").value;
       const password = document.getElementById("editPassword").value;
       const changePassword = document.getElementById("editPasswordCheck").checked;
-      if (!site || !user) return;
+      if (!site) return;
 
       const res = await fetch("/home", {
         method: "PUT",
